remove unwanted files

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
         <section class="products">
             <h2>Our Products</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, voluptatum autem eius omnis, accusantium asperiores harum labore inventore sapiente ex quas blanditiis earum quae. Quibusdam quia a perspiciatis itaque alias!</p>
             <div class="product" data-id="1">
                 <h3>IBC Tank 1000L</h3>
                 <p>High-quality IBC tank with a capacity of 1000 liters.</p>
@@ -33,7 +34,7 @@
             </div>
             <div class="product" data-id="2">
                 <h3>Plastic Drum 500L</h3>
-                <p>High-quality Plastic Drum with a capacity of 500 liters.</p>
+                <p>High-quality Plastic Drum with a capacity of 200 liters.</p>
                 <button class="view-product">View Details</button>
             </div>
         </section>
