--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
                 <textarea id="message" name="message" required></textarea>
                 <button type="submit">Send</button>
             </form>
+            <div class="whatsapp">
+                <a href="https://api.whatsapp.com/send?phone=923204904565">
+                    whatsapp
+                    <i class="fa-brands fa-whatsapp"></i>
+                </a>
+            </div>
         </div>
     </div>
 
