--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to IBC Tank Store</h1>
+        <h1>IBC Tank Store</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -26,12 +26,15 @@
 
         <section class="products">
             <h2>Our Products</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ducimus consequatur sint sit fugiat veniam quidem deleniti saepe tenetur veritatis culpa ipsum atque molestiae est, excepturi iste quam assumenda. Commodi?</p>
             <div class="product" data-id="1">
+                <img src="" alt="">
                 <h3>IBC Tank 1000L</h3>
                 <p>High-quality IBC tank with a capacity of 1000 liters.</p>
                 <button class="view-product">View Details</button>
             </div>
             <div class="product" data-id="2">
+                <img src="" alt="">
                 <h3>Plastic Drum 500L</h3>
                 <p>High-quality Plastic Drum with a capacity of 500 liters.</p>
                 <button class="view-product">View Details</button>
@@ -63,7 +66,6 @@
         <div class="popup-content">
             <span class="close">&times;</span>
             <h2 id="product-title"></h2>
-            <img id="product-image" src="" alt="Product Image">
             <video id="product-video" controls>
                 <source src="" type="video/mp4">
                 Your browser does not support the video tag.
