--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IBC Tank Store</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <h1>IBC Tank Store</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#" id="product-link">Products</a></li>
-                <li><a href="#" id="contact-link">Contact Us</a></li>
-            </ul>
-        </nav>
     </header>
+    <nav id="navbar">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#" id="product-link">Products</a></li>
+            <li><a href="#" id="contact-link">Contact Us</a></li>
+        </ul>
+    </nav>
 
     <main>
         <section class="intro">
@@ -24,23 +29,42 @@
             <p>We provide high-quality IBC tanks for all your storage needs.</p>
         </section>
 
+
+        <h2 class="our-products">
+            <p> Our Products</p>
+        </h2>
+
         <section class="products">
-            <h2>Our Products</h2>
-<<<<<<< HEAD
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ducimus consequatur sint sit fugiat veniam quidem deleniti saepe tenetur veritatis culpa ipsum atque molestiae est, excepturi iste quam assumenda. Commodi?</p>
-=======
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, voluptatum autem eius omnis, accusantium asperiores harum labore inventore sapiente ex quas blanditiis earum quae. Quibusdam quia a perspiciatis itaque alias!</p>
->>>>>>> 30f2f430bcfdd75ef989c3f0c6c37ed905361193
             <div class="product" data-id="1">
-                <img src="" alt="">
-                <h3>IBC Tank 1000L</h3>
-                <p>High-quality IBC tank with a capacity of 1000 liters.</p>
+                <img src="330gallon-reconditioned-ibc.jpg" alt="ibc tank">
+                <p><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
+                <button class="view-product">View Details</button>
+            </div>
+            <div class="product" data-id="1">
+                <img src="330gallon-reconditioned-ibc.jpg" alt="ibc tank">
+                <p><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
                 <button class="view-product">View Details</button>
             </div>
             <div class="product" data-id="2">
-                <img src="" alt="">
-                <h3>Plastic Drum 500L</h3>
-                <p>High-quality Plastic Drum with a capacity of 200 liters.</p>
+                <img src="275gallon-rebottled-ibc.jpg" alt="ibc tank">
+                <p><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
+                <button class="view-product">View Details</button>
+            </div>
+        </section>
+        <section class="products">
+            <div class="product" data-id="1">
+                <img src="330gallon-reconditioned-ibc.jpg" alt="ibc tank">
+                <p><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
+                <button class="view-product">View Details</button>
+            </div>
+            <div class="product" data-id="1">
+                <img src="330gallon-reconditioned-ibc.jpg" alt="ibc tank">
+                <p><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
+                <button class="view-product">View Details</button>
+            </div>
+            <div class="product" data-id="2">
+                <img src="275gallon-rebottled-ibc.jpg" alt="ibc tank">
+                <p><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
                 <button class="view-product">View Details</button>
             </div>
         </section>
@@ -65,8 +89,8 @@
             </form>
             <div class="whatsapp">
                 <a href="https://api.whatsapp.com/send?phone=923204904565">
-                    whatsapp
                     <i class="fa-brands fa-whatsapp"></i>
+                    <i>whatsapp</i>
                 </a>
             </div>
         </div>
@@ -87,4 +111,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
