--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
 
 <body>
     <header>
+        <p><img src="1000_F_228091946_WGzM1pPXW3lpt4by4YJCfkdJxWvIuoSH-removebg-preview.png" alt="ibc tank"></p> 
         <h1>IBC Tank Store</h1>
+        <p class="location">
+            <i class="fa-solid fa-location-dot"></i>
+            <!-- headoffice:c1 sultan town,raiwind road 1km thokar niaz baig lahore. -->
+             <!-- goddam:lahore,rawalpindi,karachi. -->
+           <b>Lahore,Pakistan.</b>
+        </p>
     </header>
     <nav id="navbar">
         <ul>
@@ -37,35 +44,42 @@
         <section class="products">
             <div class="product" data-id="1">
                 <img src="330gallon-reconditioned-ibc.jpg" alt="ibc tank">
-                <p><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
+                <p class="dummy">b</p>
                 <button class="view-product">View Details</button>
+                <p class="buy-btn"><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
             </div>
             <div class="product" data-id="1">
                 <img src="330gallon-reconditioned-ibc.jpg" alt="ibc tank">
-                <p><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
+                <p class="dummy">b</p>
                 <button class="view-product">View Details</button>
+                <p  class="buy-btn"><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
             </div>
             <div class="product" data-id="2">
                 <img src="275gallon-rebottled-ibc.jpg" alt="ibc tank">
-                <p><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
+                <p class="dummy">b</p>
                 <button class="view-product">View Details</button>
+                <p  class="buy-btn"><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
+    
             </div>
         </section>
         <section class="products">
             <div class="product" data-id="1">
                 <img src="330gallon-reconditioned-ibc.jpg" alt="ibc tank">
-                <p><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
+                <p class="dummy">b</p>
                 <button class="view-product">View Details</button>
+                <p  class="buy-btn"><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
             </div>
             <div class="product" data-id="1">
                 <img src="330gallon-reconditioned-ibc.jpg" alt="ibc tank">
-                <p><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
+                <p class="dummy">b</p>
                 <button class="view-product">View Details</button>
+                <p  class="buy-btn"><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
             </div>
             <div class="product" data-id="2">
                 <img src="275gallon-rebottled-ibc.jpg" alt="ibc tank">
-                <p><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
+                <p class="dummy">b</p>
                 <button class="view-product">View Details</button>
+                <p  class="buy-btn"><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
             </div>
         </section>
     </main>
