--- a/products.html
+++ b/products.html
@@ -25,9 +25,9 @@
     </header>
     <nav id="navbar">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#" id="product-link">Products</a></li>
-            <li><a href="#" id="contact-link">Contact Us</a></li>
+            <li><a href="index.html" class="tabs">Home</a></li>
+            <li><a href="#" id="product-link" class="tabs active">Products</a></li>
+            <li><a href="#" id="contact-link" class="tabs">Contact Us</a></li>
         </ul>
     </nav>
 
