add info about delivery and order placement

--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@ IBC tanks are strong and easy to fill, stack, and load. They resist impacts, tea
     and stresses with automatic vacuum vents that activate when internal pressures reach 0.25 PSIG.
      Materials can be stored and handled with minimal risk and waste. 
      The design of IBC inflow and outflow systems minimizes spillage and overflow, promoting zero waste.</p>
-</p>        
+</p>
+<h5 class="info">We provide services in all over Pakistan.</h5>   
+<h5 class="info">Price details and Order placement will be done via <a href="https://api.whatsapp.com/send?phone=923204904565">whatsapp</a>.</h5>     
 </section>
         
     </main>
