add facebook link

--- a/index.html
+++ b/index.html
@@ -43,23 +43,20 @@
         <section class="products">
             <div class="product" data-id="1">
                 <img src="330gallon-reconditioned-ibc.jpg" alt="ibc tank">
-                <p class="dummy">b</p>
-                <button class="view-product">View Details</button>
+                <p class="dummy"></p>
                 <p class="buy-btn">
                     <a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a>
                 </p>
             </div>
             <div class="product" data-id="1">
                 <img src="330gallon-reconditioned-ibc.jpg" alt="ibc tank">
-                <p class="dummy">b</p>
-                <button class="view-product">View Details</button>
+                <p class="dummy"></p>
                 <p  class="buy-btn"><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a>
                 </p>
             </div>
             <div class="product" data-id="2">
                 <img src="275gallon-rebottled-ibc.jpg" alt="ibc tank">
-                <p class="dummy">b</p>
-                <button class="view-product">View Details</button>
+                <p class="dummy"></p>
                 <p  class="buy-btn"><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a>
                 </p>
     
@@ -92,6 +89,10 @@ IBC tanks are strong and easy to fill, stack, and load. They resist impacts, tea
     </main>
 
     <footer>
+        <div class="links-wrapper">
+            <p><a href="https://www.facebook.com/IBCtankPakistan"><i class="fa-brands fa-facebook white"></i></a></p>
+           <p><a href="https://api.whatsapp.com/send?phone=923204904565"><i class="fa-brands fa-whatsapp green"></i></a></a></p>
+        </div>
         <p>&copy; 2024 IBC Tank Store. All rights reserved.</p>
     </footer>
 
