--- a/products.html
+++ b/products.html
@@ -86,6 +86,14 @@
     </main>
 
     <footer>
+        <div class="links-wrapper">
+            <p><a href="https://www.facebook.com/IBCtankPakistan"><i class="fa-brands fa-facebook white"></i></a></p>
+           <p><a href="https://api.whatsapp.com/send?phone=923204904565"><i class="fa-brands fa-whatsapp green"></i></a></a></p>
+        </div>
+        <p class="location mobile">
+            <i class="fa-solid fa-location-dot"></i>
+           <b>Lahore,Pakistan.</b>
+        </p>
         <p>&copy; 2024 IBC Tank Store. All rights reserved.</p>
     </footer>
 
