--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                     <a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a>
                 </p>
             </div>
-            <div class="product" data-id="1">
-                <img src="330gallon-reconditioned-ibc.jpg" alt="ibc tank">
+            <div class="product" data-id="2">
+                <img src="drum2.jpeg" alt="ibc tank">
                 <p class="dummy"></p>
                 <p class="buy-btn"><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a>
                 </p>
             </div>
-            <div class="product" data-id="2">
+            <div class="product" data-id="1">
                 <img src="275gallon-rebottled-ibc.jpg" alt="ibc tank">
                 <p class="dummy"></p>
                 <p class="buy-btn"><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a>
