--- a/products.html
+++ b/products.html
@@ -50,13 +50,13 @@
                 <p class="buy-btn"><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
             </div>
             <div class="product" data-id="1">
-                <img src="330gallon-reconditioned-ibc.jpg" alt="ibc tank">
+                <img src="download (3).jpeg" alt="ibc tank">
                 <p class="dummy">b</p>
                 <button class="view-product">View Details</button>
                 <p class="buy-btn"><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
             </div>
             <div class="product" data-id="2">
-                <img src="275gallon-rebottled-ibc.jpg" alt="ibc tank">
+                <img src="images-removebg-preview.png" alt="ibc tank">
                 <p class="dummy">b</p>
                 <button class="view-product">View Details</button>
                 <p class="buy-btn"><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
@@ -65,19 +65,19 @@
         </section>
         <section class="products">
             <div class="product" data-id="1">
-                <img src="330gallon-reconditioned-ibc.jpg" alt="ibc tank">
+                <img src="images (4).jpeg" alt="ibc tank">
                 <p class="dummy">b</p>
                 <button class="view-product">View Details</button>
                 <p class="buy-btn"><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
             </div>
             <div class="product" data-id="1">
-                <img src="330gallon-reconditioned-ibc.jpg" alt="ibc tank">
+                <img src="330gallon-rebottled-ibc.jpg" alt="ibc tank">
                 <p class="dummy">b</p>
                 <button class="view-product">View Details</button>
                 <p class="buy-btn"><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
             </div>
             <div class="product" data-id="2">
-                <img src="275gallon-rebottled-ibc.jpg" alt="ibc tank">
+                <img src="drum2.jpeg" alt="ibc tank">
                 <p class="dummy">b</p>
                 <button class="view-product">View Details</button>
                 <p class="buy-btn"><a href="https://api.whatsapp.com/send?phone=923204904565">Contact to Buy</a></p>
