update contact us page

--- a/products.html
+++ b/products.html
@@ -151,8 +151,13 @@
                 Subject: "This is the subject",
                 Body: "And this is the body"
             }).then(
-                message => alert(message)
+                message => alert('Thanks for your message.We will contact as soon as possible.')
             );
+        }
+        window.onkeydown=(event)=>{
+            if (event=='Enter'){
+                emailSend();
+            }
         }
     </script>
 </body>
