--- a/products.html
+++ b/products.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="google-adsense-account" content="ca-pub-9292583891027825">
     <link rel="shortcut icon" href="Screenshot 2024-07-05 110130.png" width="100px" height="100px" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -146,7 +147,7 @@
                 Host: "smtp.elasticemail.com",
                 Username: "rabdulqadeer96@gmail.com",
                 Password: "EABA84C2995E19E3B1829CC7AF9CAF1348D0",
-                To: 'kashif.hy@gmail.com',
+                To: 'rabdulqadeer96@gmail.com',
                 From: "rabdulqadeer96@gmail.com",
                 Subject: "This is the subject",
                 Body: "And this is the body"
