add gmail for submit form

--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
         <div class="popup-content">
             <span class="close">&times;</span>
             <h2>Contact Us</h2>
-            <form id="contact-form" onsubmit="emailSend(); reset(); return false; ">
+            <form id="contact-form" action="https://formsubmit.co/kashif.hy@gmail.com" method="POST" >
+                <!-- onsubmit="emailSend(); reset(); return false; "-->
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
                 <label for="phone">Phone:</label>
