--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta name="google-adsense-account" content="ca-pub-9292583891027825">
+    <meta name="google-site-verification" content="K4z-r4V_K0KjAzYclyxNY_Go9iLx5Rg0D7eDOZzsVQs" />
     <link rel="shortcut icon" href="Screenshot 2024-07-05 110130.png" width="100px" height="100px" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
